--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -68,7 +68,7 @@ button {
 
 .hero-title {margin:0 0 1rem 0;font-size:2.5rem;}
 .hero-description {}
-.hero-cta {display:flex;align-items:center;justify-content:center;width:241px;height:45px;margin:3rem 0 0;border-radius:50px;text-align:center;background:var(--yellow);color:var(--gray0);font-weight:800;}
+.hero-cta {display:flex;align-items:center;justify-content:center;width:260px;height:56px;margin:3rem 0 0;border-radius:50px;text-align:center;background:var(--yellow);color:var(--gray0);font-weight:800;}
 
 .hero-object-group {height:100%;position:absolute;right:-4rem;top:-8rem;}
 .hero-object-group-inner {position:relative;}
@@ -85,8 +85,8 @@ button {
 /* todo safe area */
 .home-cta {display:flex;justify-content:center;padding:0 5%;position:fixed;left:0;right:0;bottom:calc(constant(safe-area-inset-bottom) + 2rem);bottom:calc(env(safe-area-inset-bottom) + 2rem);z-index:9;transform:translateY(100px);transition:all .6s;opacity:0;}
 .home-cta-button {
-  display:flex;align-items:center;justify-content:center;width:100%;max-width:687px;height:45px;margin:3rem 0 0;
-  border-radius:50px;text-align:center;background:var(--yellow);color:var(--gray0);font-weight:800;}
+  display:flex;align-items:center;justify-content:center;width:100%;max-width:450px;height:56px;margin:3rem 0 0;
+  border-radius:50px;text-align:center;background:var(--yellow);font-size:1.25rem;color:var(--gray0);font-weight:800;}
 .home-cta.is-fixed {transform:translateY(0);opacity:1;}
 
 .home-tablist {background:var(--gray0);position:absolute;left:0;right:0;z-index:9;transition:all .4s;}
@@ -109,7 +109,7 @@ button {
 .home-tabpanel-section-background.tab3-4 {opacity:.1;}
 
 .align-centered .home-tabpanel-section-inner {padding:7.5rem 0;text-align:center;}
-.align-centered .home-tabpanel-section-media {margin:3rem 0 0 0;}
+.align-centered .home-tabpanel-section-media {margin:3rem auto 0;}
 .align-half .home-tabpanel-section-inner {display:flex;flex-wrap:wrap;align-items:center;}
 .align-half .home-tabpanel-section-title {padding-left:55%;}
 .align-half .home-tabpanel-section-description {padding-left:55%;}
@@ -126,7 +126,7 @@ button {
 .is-observed .home-tabpanel-section-description {animation:fadeup var(--animation-duration) .5s forwards;}
 .is-observed .home-tabpanel-section-media {animation:fadeup var(--animation-duration) 1s forwards;}
 
-.tabpanel1-3-wrap {max-width:816px;margin:1rem auto 0;}
+.tabpanel1-3-wrap {max-width:816px;}
 .tabpanel1-3-o {max-width:14px;margin:6rem;opacity:1;}
 .tabpanel1-3-x {max-width:20px;margin:6rem;opacity:1;}
 
@@ -207,10 +207,10 @@ button {
 .tabpanel2-4-wrap {max-width:758px;margin:0 auto;}
 
 .tabpanel2-5-wrap {position:absolute;animation:none !important;opacity:1;}
-.tabpanel2-5-1 {margin:2.5rem 0 0 2rem;position:absolute;z-index:1;}
+.tabpanel2-5-1 {max-width:75.42213883677%;box-shadow:var(--shadow400);position:absolute;left:10.8818011257%;top:14.57489878543%;z-index:1;opacity:0;}
 .tabpanel2-5-2 {max-width:533px;opacity:0;}
-.is-observed .tabpanel2-5-1 {animation:fadeup var(--animation-duration) 1s both;}
-.is-observed .tabpanel2-5-2 {transition:all var(--animation-duration) .4s;opacity:.2;}
+.is-observed .tabpanel2-5-1 {animation:fadeup var(--animation-duration) 1s forwards;}
+.is-observed .tabpanel2-5-2 {transition:all var(--animation-duration) .4s;opacity:1;}
 
 .tabpanel3-1-1 {max-width:749px;margin:4rem auto 0;}
 
@@ -221,20 +221,23 @@ button {
 .is-observed .tabpanel3-2-1 {animation:faderight var(--animation-duration) 1s both;}
 .is-observed .tabpanel3-2-2 {animation:fadeleft var(--animation-duration) 1.4s both;}
 
+
+.tabpanel3-3-wrap {max-width:612px;position:absolute;}
+
 .tabpanel3-4-wrap {margin:6rem 0 0;position:absolute;animation:none !important;opacity:1;}
 .tabpanel3-4-1 {max-width:582px;opacity:0;}
-.tabpanel3-4-2 {max-width:104px;position:absolute;right:110px;top:calc(-8px - 107px);z-index:1;opacity:0;}
-.tabpanel3-4-3 {max-width:158px;position:absolute;right:0;top:calc(-14px - 44px);opacity:0;} 
+.tabpanel3-4-2 {max-width:17.86941580756%;position:absolute;right:22%;top:0;z-index:1;opacity:0;box-shadow:var(--shadow400);}
+.tabpanel3-4-3 {max-width:27.14776632302%;position:absolute;right:0;top:24%;opacity:0;} 
 /*  */
 .is-observed .tabpanel3-4-1 {animation:fadeup var(--animation-duration) 1s both;}
 .is-observed .tabpanel3-4-2 {animation:fadeup var(--animation-duration) 1.8s both;}
 .is-observed .tabpanel3-4-3 {animation:fadeup var(--animation-duration) 1.4s both;}
 
 /* todo size  % */
-.tabpanel4-1-wrap {width:100%;max-width:612px;height:586px;position:absolute;animation:none;}
-.is-observed .tabpanel4-1-1 {max-width:271px;position:absolute;left:0;top:0;z-index:2;}
+.tabpanel4-1-wrap {width:100%;max-width:612px;position:absolute;animation:none;}
+.is-observed .tabpanel4-1-1 {max-width:271px;box-shadow:var(--shadow400);position:relative;left:0;top:0;z-index:2;}
 .is-observed .tabpanel4-1-2 {max-width:311px;position:absolute;right:12%;top:140px;z-index:3;animation:fadeup var(--animation-duration) 1.4s both;}
-.is-observed .tabpanel4-1-3 {max-width:377px;position:absolute;right:27px;bottom:20px;z-index:1;animation:fadeup var(--animation-duration) 1.8s both;}
+.is-observed .tabpanel4-1-3 {max-width:377px;box-shadow:var(--shadow400);position:absolute;right:5px;bottom:26px;z-index:1;animation:fadeup var(--animation-duration) 1.8s both;}
 
 
 .tabpanel4-2-wrap {display:flex;justify-content:center;max-width:743px;margin:4rem auto -24rem;transform:translateY(20rem);transition:transform .8s 1s;}
@@ -300,15 +303,25 @@ button {
   .footer-inner {display:block;}
   .footer-socials {margin:2rem 0 0 -1rem;}
 
-  .tabpanel1-2-wrap,
-  .tabpanel1-4-wrap,
-  .tabpanel2-1-wrap,
-  .tabpanel2-2-wrap,
-  .tabpanel2-5-wrap,
-  .tabpanel3-4-wrap,
-  .tabpanel4-1-wrap,
-  .tabpanel4-5-wrap,
-  .tabpanel4-3-wrap {position:relative;}
+
+
+  .tabpanel2-2-wrap .users {max-width:1000px;}
+  .tabpanel2-2-wrap .tag1,
+  .tabpanel2-2-wrap .tag2,
+  .tabpanel2-2-wrap .users .user5,
+  .tabpanel2-2-wrap .users .user6 {display: none}
+  .tabpanel2-2-wrap .users > div {width:calc(50% - .5rem);margin:0 0 14px 0;position:relative;}
+  .tabpanel2-2-wrap .confirm {display:flex;max-width:1000px;margin:-1.5rem -5% 0;}
+/* 
+  margin-right: -4rem;}
+.tabpanel2-2-wrap .tag2 {width:100%;max-width:98px;position:absolute;left:65px;bottom:80px;}
+.tabpanel2-2-wrap .users {width:100%;max-width:580px;margin:0 auto;display:flex;flex-wrap:wrap;justify-content:space-between;}
+.tabpanel2-2-wrap .users > div {width:185px;margin:0 0 14px 0;position:relative;}
+.tabpanel2-2-wrap .users > div .donut-wrap {width:76px;position:absolute;top:25%;left:5%;z-index:1;}
+.tabpanel2-2-wrap .users > div img {display:block;} */
+
+
+
 
   .tabpanel3-2-2 {position: relative;top:auto;}
 
@@ -320,6 +333,14 @@ button {
   .tabpanel3-2-wrap {
     margin-bottom: 12rem;
   }
+  .tabpanel3-2-1 {margin:-2rem auto 0;}
+  .tabpanel3-2-2 {margin:-2rem auto 0;}
+
+
+  .is-observed .tabpanel4-1-1 {max-width:42.66666666667%;box-shadow:var(--shadow400);}
+  .is-observed .tabpanel4-1-2 {max-width:32.26666666667%;right:0;top:17%;}
+  .is-observed .tabpanel4-1-3 {max-width:66.66666666667%;right:5px;bottom:-10px;z-index:4;}
+
 
 
   .home-tablist-inner {justify-content:left;overflow:auto;white-space:nowrap;}
@@ -332,6 +353,7 @@ button {
     height: 56px;
   }
 
+  .align-half .home-tabpanel-section-media {position:relative !important;}
   .home-tabpanel-section-inner,
   .align-centered .home-tabpanel-section-inner {padding-top:4rem;padding-bottom:4rem;}
 }
