--- a/public/stylesheets/abstracts/keyframes.css
+++ b/public/stylesheets/abstracts/keyframes.css
@@ -32,7 +32,7 @@
 
 @keyframes test {
 	0% {transform: translateY(0px);}
-	100% {transform: translateY(-800px);}
+	100% {transform: translateY(-70%);}
 }
 
 @keyframes bookmark {
