--- a/public/stylesheets/abstracts/variables.css
+++ b/public/stylesheets/abstracts/variables.css
@@ -1,10 +1,7 @@
-/* // ! viewport : desktop first
-/* /* @custom-media --viewport-large (max-width: 1441px); */
-@custom-media --viewport-small (max-width: 1200px);
-@custom-media --viewport-tiny (max-width: 1200px);
+/* @custom-media --viewport-small (max-width: 1200px);
+@custom-media --viewport-tiny (max-width: 1200px); */
 
 :root {
-  color-scheme: light;
   --fontstack: 'NanumSquare', sans-serif;
   --gray0: #fff;
   --gray100: #fafafa;
