--- a/public/stylesheets/components/browser.css
+++ b/public/stylesheets/components/browser.css
@@ -1,12 +1,10 @@
 @charset 'utf-8';
 
-.browser {display:flex;align-items:center;justify-content:center;height:100vh;text-align:center;background:url('../../images/browser-bg.png') no-repeat center top;background-size:100% auto;}
+.browser {height:100vh;text-align:center;background:url('../../images/browser-bg.png') no-repeat center top;background-size:100% auto;}
 .browser-inner {max-width:808px;margin:0 auto;padding:4rem 5%;position:relative;}
 .browser-icon {max-width:72px;margin:0 auto 1.5rem;}
 .browser-title {margin:0 0 1rem 0;font-size:3rem;color:var(--gray900);}
+.browser-title em {}
 /* .browser-description {font-size:10.11px;line-height:13.5px;color:var(--gray700);} */
 .browser-description {color:var(--gray700);}
 .browser-button {display:flex;align-items:center;justify-content:center;width:180px;height:53px;margin:3rem auto;padding:0 1rem;background:#1CB8EB;font-size:18px;font-weight:800;color:#fff;}
-.browser-object1 {width:256px;margin:2rem auto 0;}
-.browser-object2 {width:100px;position:absolute;right:30px;top:6rem;}
-.browser-object3 {width:100px;position:absolute;left:10px;bottom:4rem;}
