--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -23,7 +23,7 @@ small {}
 a {text-decoration:none;text-decoration-skip-ink:auto;color:var(--color-primary);} a:link,a:visited {} a:hover,a:focus {} a:active {}
 /* // br {content:'';display:block;height:1rem;} */
 html {min-width:320px;height:100%;font:16px/1.8 var(--fontstack);color:var(--gray800);-webkit-text-size-adjust:100%;-webkit-font-smoothing:antialiased;text-rendering:optimizeLegibility;overscroll-behavior:contain;overflow-x:hidden;}
-body {background:var(--gray0);overflow-x:hidden;letter-spacing:-.0125rem;}
+body {background:var(--gray0);overflow-x:hidden;}
 
 svg {color:var(--gray800);}
 
