--- a/public/stylesheets/abstracts/variables.css
+++ b/public/stylesheets/abstracts/variables.css
@@ -30,7 +30,7 @@
   --caption: .875rem;
   
   --weight-normal: 400;
-  --weight-bold: 600;
+  --font-weight-bold: 600;
   --weight-extrabold: 800;
 
   --container-medium: 640px;
